tests/miniJava/pos/000674_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) java = 0 ; else while ( 0 ) { } } }
