tests/miniJava/neg/000336_mutation.MiniJava
class java { public static void Main ( ; [ ] java ) { { } } }
